{
    "name": "DefaultAction",
    "maps": [
        {
            "name": "Robot",
            "id": "494002d8-0270-4669-9650-05c5895ff640",
            "actions": [
                {
                    "name": "RobotUp",
                    "type": "Button",
                    "id": "e0168cc2-9175-4f47-9d36-a14ab2775a47",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RobotRotator",
                    "type": "Button",
                    "id": "ff8eddd5-1a25-445e-85d7-547c70692310",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1dded46e-ad6c-467d-862d-5ae08bbc4288",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RobotUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "AD",
                    "id": "461ec02c-754a-4afc-b688-79739e0839d0",
                    "path": "ButtonWithTwoModifiers",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RobotRotator",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Modifier 1",
                    "id": "de0aab8b-2a65-4ddc-9a13-8c914de41121",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RobotRotator",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Modifier 2",
                    "id": "07e33667-79e2-4943-868f-9d31bad081ba",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RobotRotator",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Button",
                    "id": "931c432a-5a88-4ab6-98a9-d0f1708d44d6",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RobotRotator",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}